BUGFIX: Add ellipsis to nodeInfoView content
The NodeTypeName in the info panel was getting cut off, so I implemented a solution to enhance the display. Now, an ellipsis is added to prevent overflow within the container, and the full NodeType name is accessible through a tooltip that appears when hovered over.

Fixes: #3637

--- a/packages/neos-ui-views/src/NodeInfoView/style.css
+++ b/packages/neos-ui-views/src/NodeInfoView/style.css
@@ -29,5 +29,8 @@
     &__content {
         font-size: 13px;
         color: var(--colors-ContrastBright);
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
